# auto-matrix-manager

./: .gitignore  README.md  package.json
scripts/: douyin_auth.cjs  download-chromium.sh  generic_extractor.cjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: douyin_auth.cjs  generic_extractor.cjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/browser/: data_extractor_engine.rs  extractor_config.rs  generic_browser.rs  mod.rs  playwright_env.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: factory.rs  mod.rs  publish_progress.rs
src-tauri/src/storage/: mod.rs
src/components/: AddAccountDialog.vue  ExtractorConfigEditor.vue  PublishDialog.vue
src/composables/: useBrowserAuth.ts
src/router/: index.ts
src/services/: api.ts
src/types/: index.ts
src/views/: AccountManagement.vue  CommentDetail.vue  PublicationDetail.vue  Settings.vue  WorkPublication.vue
