[package]
name = "auto-matrix-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "auto_matrix_manager"
path = "src/lib.rs"

[[bin]]
name = "auto-matrix-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
md5 = "0.7"
regex = "1.5"
percent-encoding = "2"
html-escape = "0.2"
indexmap = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
crc32fast = "1.4"
urlencoding = "2"
rand = "0.8"
playwright = "0.0.20"
base64 = "0.22"
headless_chrome = "1.0"
rfd = "0.14"
once_cell = "1"
